* Fixed: Pricing Table - Table alignment issue * Fixed: Pricing Table - Features icon position issue

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1158,11 +1158,13 @@ div[class*=' pa-'] {
     .pp-pricing-table.horizontal-table .pp-pricing-table-footer,
     .pp-pricing-table.horizontal-table .pp-pricing-table-features {
       flex: 1; }
-  .pp-pricing-table-align-left .pp-pricing-table {
+  .pp-pricing-table-align-left .pp-pricing-table,
+  .pp-pricing-table-align-left.pp-pricing-table-price-duration-wrap .pp-pricing-table-price-duration {
     text-align: left; }
   .pp-pricing-table-align-left .pp-pricing-table-price {
     justify-content: flex-start; }
-  .pp-pricing-table-align-right .pp-pricing-table {
+  .pp-pricing-table-align-right .pp-pricing-table,
+  .pp-pricing-table-align-right.pp-pricing-table-price-duration-wrap .pp-pricing-table-price-duration {
     text-align: right; }
   .pp-pricing-table-align-right .pp-pricing-table-price {
     justify-content: flex-end; }
@@ -1189,7 +1191,7 @@ div[class*=' pa-'] {
   .pp-pricing-table .pp-pricing-table-features {
     list-style: none;
     margin: 0;
-    padding: 0; }
+    padding: 0 30px; }
     .pp-pricing-table .pp-pricing-table-features li {
       margin: 0;
       padding: 0; }
@@ -1226,7 +1228,8 @@ div[class*=' pa-'] {
     text-decoration: line-through; }
 
 .pp-pricing-table-feature-content {
-  display: inline-block; }
+  display: inline-flex;
+  align-items: center; }
 
 .pp-pricing-table-ribbon {
   color: #fff;
@@ -1307,9 +1310,6 @@ div[class*=' pa-'] {
         border-right: 8px solid #61ce70; }
       .pp-pricing-table-ribbon-3.pp-pricing-table-ribbon-left:after {
         border-right: 8px solid rgba(0, 0, 0, 0.2); }
-
-.pp-tooltip-click {
-  cursor: pointer; }
 
 .pp-restaurant-menu .pp-restaurant-menu-item-wrap {
   margin-bottom: 10px;
